# lenergy5.4.1

./: CMakeLists.txt  Fiver_lenergy.docx  Functional Specification_GOKU (1).docx  Logs.txt  partitions.csv  sdkconfig  sdkconfig.old  upgrade_Err_Logs-0517.txt  新建 Microsoft Word 文档.docx
Working_Demo/ESP32-S3-Touch-LCD1/: sdkconfig  sdkconfig.defaults  sdkconfig.old
Working_Demo/ESP32-S3-Touch-LCD1/main/: CMakeLists.txt  counter.c  counter.h  i2c_bus.c  main.c  spi_bus.c  spi_bus.h  tca9535.c  tca9535.h
Working_Demo/ESP32-S3-Touch-LCD1/main/BAT_Driver/: BAT_Driver.h
Working_Demo/ESP32-S3-Touch-LCD1/main/GPS/: gps_parser.c  gps_parser.h  qibla_display.c
Working_Demo/ESP32-S3-Touch-LCD1/main/LCD_Driver/: ST7701S.c  ST7701S.h
Working_Demo/ESP32-S3-Touch-LCD1/main/LVGL_Driver/: LVGL_Driver.c
Working_Demo/ESP32-S3-Touch-LCD1/main/LVGL_UI/: LVGL_CounterPage.c  LVGL_CounterPage.h  LVGL_Example.c  LVGL_Example.h
Working_Demo/ESP32-S3-Touch-LCD1/main/LVGL_UI/assets/: Qiyam.h  battery_icon.c  battery_icon.h  juloos.h  ruku.h  sujood.h
Working_Demo/ESP32-S3-Touch-LCD1/main/QMI8658/: QMI8658.c
Working_Demo/ESP32-S3-Touch-LCD1/main/VI53I0x/: vl53l0x_api.cpp  vl53l0x_api.h  vl53l0x_api_calibration.cpp  vl53l0x_api_calibration.h  vl53l0x_api_core.cpp  vl53l0x_api_debug.c  vl53l0x_api_ranging.cpp  vl53l0x_api_strings.cpp  vl53l0x_def.h  vl53l0x_device.h  vl53l0x_i2c.cpp  vl53l0x_interrupt_threshold_settings.h  vl53l0x_platform.h  vl53l0x_platform_log.h  vl53l0x_sensor.c  vl53l0x_sensor.h  vl53l0x_strings.h  vl53l0x_tuning.cpp  vl53l0x_tuning.h
Working_Demo/ESP32-S3-Touch-LCD1/main/Wireless/: Wireless.c
main/: .cproject  CMakeLists.txt  backgrounds.c  backgrounds.h  battery_monitor.c  battery_monitor.h  bg_1.h  bg_1_data_night.h  bg_2.h  bg_2_data_night.h  bg_3.h  bg_3_data_night.h  buzzer.c  buzzer.h  color.h  config_menu.c  config_menu.h  esp_check.h  esp_err.h  esp_lcd_panel_interface.h  esp_lcd_panel_ops.h  esp_lcd_panel_vendor.h  esp_log.h  espnow_sync.c  espnow_sync.h  font8x8_basic.c  font8x8_basic.h  font8x8_basic_ascii_data.c  font8x8_basic_data.h  gps_parser.c  hadiths.c  hadiths.h  icons.c  icons.h  image_manager.c  image_manager.h  input_manager.c  input_manager.h  lang.c  lang.h  (+33 more)
main/EXIO/: TCA9554PWR.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
