idf_component_register(
      set(LV_DEMO_WIDGETS_DIR ${CMAKE_SOURCE_DIR}/managed_components/lvgl__lvgl/demos/widgets)
                        SRCS  "main.c" 
                              "EXIO/TCA9554PWR.c"
                              "LCD_Driver/ST7701S.c" 
                              "Touch_Driver/CST820.c"
                              "Touch_Driver/esp_lcd_touch/esp_lcd_touch.c" 
                              "LVGL_Driver/LVGL_Driver.c"
                              "I2C_Driver/I2C_Driver.c"
                              "VI53I0x/vl53l0x_sensor.c"
                              "VI53I0x/vl53l0x_api.cpp"
                              "VI53I0x/vl53l0x_api_calibration.cpp"
                              "VI53I0x/vl53l0x_api_core.cpp"
                              "VI53I0x/vl53l0x_api_ranging.cpp"
                              "VI53I0x/vl53l0x_api_strings.cpp"
                              "VI53I0x/vl53l0x_i2c.cpp"
                              "VI53I0x/vl53l0x_platform.cpp"
                              "VI53I0x/vl53l0x_tuning.cpp"
                              "VI53I0x/vl53l0x_extra_stubs.c"
                              "VI53I0x/vl53l0x_api_debug.c"

                              "GPS/gps_parser.c"
                              "GPS/qibla_display.c"
                              "LVGL_UI/LVGL_CounterPage.c"
                              "counter.c"

                               "LVGL_UI/assets/ruku.c"
                               "LVGL_UI/assets/sujood.c"
                               "LVGL_UI/assets/juloos.c"
                               "LVGL_UI/assets/Qiyam.c"
                               "LVGL_UI/assets/battery_icon.c"


                              "PCF85063/PCF85063.c"
                              "QMI8658/QMI8658.c"
                              "SD_Card/SD_MMC.c"
                              "LVGL_UI/LVGL_Example.c"
                              "Wireless/Wireless.c"
                              "Buzzer/Buzzer.c"
                              "BAT_Driver/BAT_Driver.c"
                              "i2c_bus.c"
                              "tca9535.c"
                              "spi_bus.c"

                        INCLUDE_DIRS "./EXIO"
                                     "./LCD_Driver"
                                     "./Touch_Driver" 
                                     "./Touch_Driver/esp_lcd_touch"  
                                     "./LVGL_Driver"
                                     "./I2C_Driver"
                                     "./PCF85063"
                                     "./QMI8658"
                                     "./SD_Card"
                                     "./LVGL_UI"
                                     "./LVGL_UI/assets"
                                     "./Wireless"
                                     "./Buzzer"
                                     "./BAT_Driver"
                                     "./VI53I0x"
                                     "./GPS"
                                     "."
                        )
